index shell code

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                         <p>Loops, Conditional Statements, Functions, Arrays</p>
                         <button><a href="jsfluencyloops/basicjs.html">Example
                                         Page</a></button>
-                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsfluencyloops">Example
+                        <button><a
+                                        href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsfluencyloops">Example
                                         Code</a></button>
                 </div>
                 <div class="topic2 topics">
@@ -30,7 +31,8 @@
                         <p>Object Creation Functions, Inheritance, Properties, Methods, Instantiation</p>
                         <button><a href="jsfluencyobjects/jsobjects.html">Example
                                         Page</a></button>
-                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsobjects">Example
+                        <button><a
+                                        href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsobjects">Example
                                         Code</a></button>
                 </div>
                 <div class="topic3 topics">
@@ -38,7 +40,8 @@
                         <p>JSON Parse & Stringify </p>
                         <button><a href="jsonparse/json.html">Example
                                         Page</a></button>
-                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsonparse">Example
+                        <button><a
+                                        href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsonparse">Example
                                         Code</a></button>
                 </div>
                 <div class="topic4 topics">
@@ -46,7 +49,8 @@
                         <p>Consume JSON with an XMLHTTP request</p>
                         <button><a href="consumejson/consumejson.html">Example
                                         Page</a></button>
-                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/consumejson">Example
+                        <button><a
+                                        href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/consumejson">Example
                                         Code</a></button>
                 </div>
                 <div class="topic5 topics">
@@ -54,7 +58,8 @@
                         <p>Local Storage</p>
                         <button><a href="ingebrigtsen-jessica.github.io/localstorage/localstorage.html">Example
                                         Page</a></button>
-                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/localstorage">Example
+                        <button><a
+                                        href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/localstorage">Example
                                         Code</a></button>
                 </div>
                 <div class="topic6 topics">
@@ -62,11 +67,55 @@
                         <p>DOM Manipulation</p>
                         <button><a href="dom/dom.html">Example
                                         Page</a></button>
-                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/dom">
+                        <button><a
+                                        href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/dom">
                                         Example
                                         Code</a></button>
                 </div>
-                
+                <div class="topic7 topics">
+                        <h3>7</h3>
+                        <p>Manipulate CSS with JS</p>
+                        <button><a href="#">Not Yet Page</a></button>
+                        <button><a href="#">Not Yet Code</a></button>
+                </div>
+                <div class="topic8 topics">
+                        <h3>8</h3>
+                        <p>CSS Transitions & Animations w/JS</p>
+                        <button><a href="#">Not Yet Page</a></button>
+                        <button>
+                                <a href="#">Not Yet Code</a>
+                        </button>
+                </div>
+                <div class="topic9 topics">
+                        <h3>9</h3>
+                        <p>Standard JS Events</p>
+                        <button><a href="#">Not Yet Page</a></button>
+                        <button><a href="#">Not Yet Code</a></button>
+                </div>
+                <div class="topic10 topics">
+                        <h3>10</h3>
+                        <p>HTML 5 Tags</p>
+                        <button><a href="#">Not Yet Page</a></button>
+                        <button><a href="#">Not Yet Code</a></button>
+                </div>
+                <div class="topic11 topics">
+                        <h3>11</h3>
+                        <p>Triggering CSS Transitions</p>
+                        <button><a href="#">Not Yet Page</a></button>
+                        <button><a href="#">Not Yet Code</a></button>
+                </div>
+                <div class="topic12 topics">
+                        <h3>12</h3>
+                        <p>Triggering CSS Transforms</p>
+                        <button><a href="#">Not Yet Page</a></button>
+                        <button><a href="#">Not Yet Code</a></button>
+                </div>
+                <div class="topic13 topics">
+                        <h3>13</h3>
+                        <p>Triggering CSS Animations</p>
+                        <button><a href="#">Not Yet Page</a></button>
+                        <button><a href="#">Not Yet Code</a></button>
+                </div>
         </div>
 </body>
 
