--- a/html5tags/html5tags.html
+++ b/html5tags/html5tags.html
@@ -51,11 +51,21 @@
             <button onclick="changeaudioposition(-10)"> &#10226; </button>
             <button onclick="changeaudioposition(10)">&#10227; </button>
         </div>
+        <div class="canvasShapes">
+            <h2>Draw Shapes with Canvas</h2>
+            <canvas id="drawhere"></canvas><br>
+            <button onclick="clearCanvas()">Clear</button>
+            <button onclick="drawRectangle()">Rectangle</button>
+            <button onclick="drawCircle()">Circle</button>
+            <button onclick="drawTriangle()">Triangle</button>
+
+        </div>
     </div>
     <script src="scripts/playandpause.js"></script>
     <script src="scripts/forwardandbackward.js"></script>
     <script src="scripts/volume.js"></script>
     <script src="scripts/fullscreen.js"></script>
+    <script src="scripts/shapes.js"></script>
 </body>
 
 </html>
