--- a/html5tags/html5tags.html
+++ b/html5tags/html5tags.html
@@ -60,12 +60,22 @@
             <button onclick="drawTriangle()">Triangle</button>
 
         </div>
+        <div class="canvasColors">
+            <h2>Gradients with Canvas</h2>
+            <canvas id="colorhere"></canvas><br>
+            <button onclick="clearColors()">Clear</button>
+            <button onclick="colorLinear()">Linear</button>
+            <button onclick="colorRadial()">Radial</button>
+           
+
+        </div>
     </div>
     <script src="scripts/playandpause.js"></script>
     <script src="scripts/forwardandbackward.js"></script>
     <script src="scripts/volume.js"></script>
     <script src="scripts/fullscreen.js"></script>
     <script src="scripts/shapes.js"></script>
+    <script src="scripts/gradients.js"></script>
 </body>
 
 </html>
