--- a/html5tags/html5tags.html
+++ b/html5tags/html5tags.html
@@ -67,6 +67,13 @@
             <button onclick="colorLinear()">Linear</button>
             <button onclick="colorRadial()">Radial</button>
         </div>
+        <div class="canvasText">
+            <h2>Text with Canvas</h2>
+            <canvas id="texthere"></canvas><br>
+            <button onclick="clearText()">Clear</button>
+            <button onclick="textFill()">Fill</button>
+            <button onclick="textStroke()">Stroke</button>
+        </div>
     </div>
     <script src="scripts/playandpause.js"></script>
     <script src="scripts/forwardandbackward.js"></script>
@@ -74,6 +81,7 @@
     <script src="scripts/fullscreen.js"></script>
     <script src="scripts/shapes.js"></script>
     <script src="scripts/gradients.js"></script>
+    <script src="scripts/text.js"></script>
 </body>
 
 </html>
