--- a/html5tags/html5tags.html
+++ b/html5tags/html5tags.html
@@ -52,7 +52,7 @@
             <button onclick="changeaudioposition(10)">&#10227; </button>
         </div>
         <div class="canvasShapes">
-            <h2>Draw Shapes with Canvas</h2>
+            <h2>Draw Shapes with Canvas!</h2>
             <canvas id="drawhere"></canvas><br>
             <button onclick="clearCanvas()">Clear</button>
             <button onclick="drawRectangle()">Rectangle</button>
