--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                 <div class="topic10 topics">
                         <h3>10</h3>
                         <p>HTML 5 Tags</p>
-                        <button><a href="#">Not Yet Page</a></button>
-                        <button><a href="#">Not Yet Code</a></button>
+                        <button><a href="https://ingebrigtsen-jessica.github.io/html5tags/html5tags.html">Example Page</a></button>
+                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/blob/master/html5tags/html5tags.html">Example Code</a></button>
                 </div>
                 <div class="topic11 topics">
                         <h3>11</h3>
