--- a/html5tags/html5tags.html
+++ b/html5tags/html5tags.html
@@ -77,7 +77,7 @@
             <button onclick="textStroke()">Stroke</button>
         </div>
         <div class="canvasPattern">
-                <h2>Patterns with Canvas</h2>
+                <h2>Patterns with Canvas!</h2>
                 <div id="test"></div>
                 <canvas id="patternhere" width="600px"></canvas><br>
                 <button onclick="clearPattern()">Clear</button>
