--- a/html5tags/html5tags.html
+++ b/html5tags/html5tags.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, 
     maximum-scale=1">
-    <title>Local Storage</title>
-    <meta name="localStorage" content="Showing local storage in javascript">
+    <title>HTML5 Tags</title>
+    <meta name="html5tags" content="Video, Audio, and Canvas HTML tag">
     <link rel="stylesheet" href="styles/styles.css">
     <link
         href="https://fonts.googleapis.com/css?family=Amatic+SC:700%7cShadows+Into+Light%7cDancing+Script%7cNoticia+Text"
