--- a/csswithjs/csswithjs.html
+++ b/csswithjs/csswithjs.html
@@ -16,8 +16,19 @@
 <body>
     <div class="container">
         <h1><a href="https://ingebrigtsen-jessica.github.io/index.html">Manipulating CSS with JS</a></h1>
-    </div>
+<div class="text">
+    <h2>Changing Text Styles</h2>
+    <p id="invite">You are cordially invited to the wedding of:</p>
+    <p id="bridegroom">Harry Potter & Ginny Weasley</p>
+    <p id="location1">to be held at</p>
+    <p id="location2">Hogwarts School of Witchcraft & Wizardry</p>
+    <button onclick="changeColor()">Color</button>
+    <button onclick="changeFont()">Font</button>
+    <button onclick="changeSize()">Size</button>
+</div>
 
+    </div><!--container-->
+<script src="scripts/changeText.js"></script>
 </body>
 
 </html>
