--- a/csswithjs/csswithjs.html
+++ b/csswithjs/csswithjs.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <h1><a href="https://ingebrigtsen-jessica.github.io/index.html">Manipulating CSS with JS</a></h1>
-<div class="text">
+<div class="text" id="test">
     <h2>Changing Text Styles</h2>
     <p id="invite">You are cordially invited to the wedding of:</p>
     <p id="bridegroom">Harry Potter & Ginny Weasley</p>
@@ -25,6 +25,7 @@
     <button onclick="changeColor()">Color</button>
     <button onclick="changeFont()">Font</button>
     <button onclick="changeSize()">Size</button>
+    <button onclick="changeAlign()">Align</button>
 </div>
 
     </div><!--container-->
