--- a/csswithjs/csswithjs.html
+++ b/csswithjs/csswithjs.html
@@ -32,15 +32,24 @@
         <p>Sometimes we may <span>need to change</span></p>
         <p>attributes of an <span>element.</span></p>
         <p>This <span>can be done by</span> by using a <span>loop!</span></p>
+   
+        <button onclick="changeBackground()">Multiple Color</button>
+        <button onclick="changeSpanFont()">Multiple Font</button>
         <p>Or you can access a specific element with <span>array selectors</span></p>
-        <button onclick="changeBackground()">Color</button>
-        <button onclick="changeSpanFont()">Font</button>
-        <button onclick="changeWithSelectors()">Single</button>
+        <button onclick="changeWithSelectors()">Single Element</button>
     </div>
+    <div class="pictures">
+            <h2>Changing Pictures</h2>
+            <img id="adjusting" src="images/triangles.jpg"><br>
+            <button onclick="changePicture(30)">Enlarge</button>
+            <button onclick="changePicture(10)">Shrink</button>
+    
+        </div>
 
     </div><!--container-->
 <script src="scripts/changeText.js"></script>
 <script src="scripts/changeElements.js"></script>
+<script src="scripts/changePictures.js"></script>
 </body>
 
 </html>
