--- a/csswithjs/csswithjs.html
+++ b/csswithjs/csswithjs.html
@@ -45,11 +45,20 @@
             <button onclick="changePicture(10)">Shrink</button>
     
         </div>
+        <div class="originalClass" id="changeable">
+                <h2>Changing Classes</h2>
+                <h3>If there are a lot of changes that need to be made...</h3>
+                <p>...you can even change the entire class using javascript.</p>
+                <p>This would allow multiple changes to made within a class with less JS code</p>
+                <button onclick="changeClasses()">Class Change</button>
 
+        
+            </div>
     </div><!--container-->
 <script src="scripts/changeText.js"></script>
 <script src="scripts/changeElements.js"></script>
 <script src="scripts/changePictures.js"></script>
+<script src="scripts/changeClasses.js"></script>
 </body>
 
 </html>
