--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <div class="topic7 topics">
                         <h3>7</h3>
                         <p>Manipulate CSS with JS</p>
-                        <button><a href="#">Not Yet Page</a></button>
-                        <button><a href="#">Not Yet Code</a></button>
+                        <button><a href="https://ingebrigtsen-jessica.github.io/csswithjs/csswithjs.html">Example Page</a></button>
+                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/csswithjs">Example Code</a></button>
                 </div>
                 <div class="topic8 topics">
                         <h3>8</h3>
