--- a/cssanimationsjs/cssanimationsjs.html
+++ b/cssanimationsjs/cssanimationsjs.html
@@ -16,28 +16,37 @@
 <body>
     <div class="container">
         <h1><a href="https://ingebrigtsen-jessica.github.io/index.html">CSS Animations & Transitions with JS</a></h1>
-<div class="colors">
-    <h2>Transition: Colors</h2>
-    <div id="box1"></div>
-    <button onclick="changeColor('#f5c5ca')">Pink</button>
-    <button onclick="changeColor('#f1fdfb')">White</button>
-    <button onclick="changeColor('#C5F5F0')">Blue</button>
-    <p>Using a Linear transition to change colors</p>
-</div>
-<div class="zoom">
-        <h2>Transition: Zoom</h2>
-        <div class="box2">Can You See Me?</div>
-        <button onclick="changeZoom()">Zoom</button>
-        <p>Using an Ease Transition, and a class toggle</p>
-    </div>
-    <div class="stretch">
+        <div class="colors">
+            <h2>Transition: Colors</h2>
+            <div id="box1"></div>
+            <button onclick="changeColor('#f5c5ca')">Pink</button>
+            <button onclick="changeColor('#f1fdfb')">White</button>
+            <button onclick="changeColor('#C5F5F0')">Blue</button>
+            <p>Using a Linear transition to change colors</p>
+        </div>
+        <div class="zoom">
+            <h2>Transition: Zoom</h2>
+            <div class="box2">Can You See Me?</div>
+            <button onclick="changeZoom()">Zoom</button>
+            <p>Using an Ease Transition, and a class toggle</p>
+        </div>
+        <div class="stretch">
             <h2>Transition: Stretch</h2>
             <div class="box3"></div>
             <button class="pausebtn" onclick="changeStretch()">Stretch</button>
-           
+
+        </div>
+        <div class="spin">
+            <h2>Animation: Spin</h2>
+            <div class="box4"></div>
+            <button class="spinbtn" onclick="spinner()">Spin</button>
+            <p>Hover over the triangle while it is spinning to pause it.</p>
+
+
         </div>
     </div>
     <script src="scripts/transitions.js"></script>
+    <script src="scripts/animations.js"></script>
 </body>
 
 </html>
