--- a/cssanimationsjs/cssanimationsjs.html
+++ b/cssanimationsjs/cssanimationsjs.html
@@ -41,7 +41,13 @@
             <div class="box4"></div>
             <button class="spinbtn" onclick="spinner()">Spin</button>
             <p>Hover over the triangle while it is spinning to pause it.</p>
-
+        </div>
+        <div class="move">
+            <h2>Animation: Move</h2>
+            <div class="box5"></div>
+            <button class="movebtn" onclick="moving()">Move</button>
+            <button onclick="reset()">Reset</button>
+            <p>Move button turns to Pause button once clicked</p>
 
         </div>
     </div>
