--- a/cssanimationsjs/cssanimationsjs.html
+++ b/cssanimationsjs/cssanimationsjs.html
@@ -34,7 +34,7 @@
             <h2>Transition: Stretch</h2>
             <div class="box3"></div>
             <button class="pausebtn" onclick="changeStretch()">Stretch</button>
-
+            <p>Toggle this class, which changes the button name</p>
         </div>
         <div class="spin">
             <h2>Animation: Spin</h2>
@@ -50,6 +50,13 @@
             <p>Move button turns to Pause button once clicked</p>
 
         </div>
+        <div class="combined">
+                <h2>Animation: Combo</h2>
+                <div class="box6"></div>
+                <button class="combobtn" onclick="combine()">Play</button>
+                <p>Combines spinning and moving!</p>
+    
+            </div>
     </div>
     <script src="scripts/transitions.js"></script>
     <script src="scripts/animations.js"></script>
