--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                 <div class="topic8 topics">
                         <h3>8</h3>
                         <p>CSS Transitions & Animations w/JS</p>
-                        <button><a href="#">Not Yet Page</a></button>
+                        <button><a href="https://ingebrigtsen-jessica.github.io/cssanimationsjs/cssanimationsjs.html">Example Page</a></button>
                         <button>
-                                <a href="#">Not Yet Code</a>
+                                <a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/cssanimationsjs">Example Code</a>
                         </button>
                 </div>
                 <div class="topic9 topics">
