--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
         <div class="container">
 
-                <h1>Jessica Ingebrigtsen - CIT-261</h1>
+                <h1>Jessica Ingebrigtsen - CIT - 261</h1>
                 <h2>JavaScript Mobile Application Development Fluency</h2>
                 <div class="topic1 topics">
                         <h3>1 </h3>
