--- a/cssanimationsjs/cssanimationsjs.html
+++ b/cssanimationsjs/cssanimationsjs.html
@@ -40,7 +40,7 @@
             <h2>Animation: Spin</h2>
             <div class="box4"></div>
             <button class="spinbtn" onclick="spinner()">Spin</button>
-            <p>Hover over the triangle while it is spinning to pause it.</p>
+            <p>Click Button to Spin, then to Pause Spin</p>
         </div>
         <div class="move">
             <h2>Animation: Move</h2>
