--- a/standardjsevents/standardevents.html
+++ b/standardjsevents/standardevents.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, 
     maximum-scale=1">
-    <title>Standard JS Evengts</title>
+    <title>Standard JS Events</title>
     <meta name="jsevents" content="Standard JavaScript Events">
     <link rel="stylesheet" href="styles/styles.css">
     <link
