--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 <div class="topic9 topics">
                         <h3>9</h3>
                         <p>Standard JS Events</p>
-                        <button><a href="#">Not Yet Page</a></button>
-                        <button><a href="#">Not Yet Code</a></button>
+                        <button><a href="https://ingebrigtsen-jessica.github.io/standardjsevents/standardevents.html">Example Page</a></button>
+                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/standardjsevents">Example Code</a></button>
                 </div>
                 <div class="topic10 topics">
                         <h3>10</h3>
