--- a/css3transitions/css3transitions.html
+++ b/css3transitions/css3transitions.html
@@ -26,7 +26,7 @@
             <div id="box3"></div>
         </div>
         <div class="move">
-            <h2>Transition: Hover & Speed</h2>
+            <h2>Transition: Speed</h2>
             <p>1 Sec Speed</p>
             <div id="box4"></div>
             <p>4 Sec Speed</p>
@@ -34,7 +34,11 @@
             <p>8 Sec Speed</p>
             <div id="box6"></div>
         </div>
-
+        <div class="zoom">
+            <h2>Transition: Zoom</h2>
+            <div id="box7">Can You See Me?</div>
+            <p>Hover over to zoom in</p>
+        </div>
     </div>
 
     </div>
