--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                 <div class="topic11 topics">
                         <h3>11</h3>
                         <p>Triggering CSS Transitions</p>
-                        <button><a href="#">Not Yet Page</a></button>
-                        <button><a href="#">Not Yet Code</a></button>
+                        <button><a href="https://ingebrigtsen-jessica.github.io/css3transitions/css3transitions.html">Example Page</a></button>
+                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/css3transitions">Example Code</a></button>
                 </div>
                 <div class="topic12 topics">
                         <h3>12</h3>
