--- a/css3transforms/css3transforms.html
+++ b/css3transforms/css3transforms.html
@@ -16,8 +16,33 @@
 <body>
     <div class="container">
         <h1><a href="https://ingebrigtsen-jessica.github.io/index.html">CSS3 Transforms</a></h1>
-
+        <div class="scaling">
+            <h2>Scale</h2>
+            <div id="scalexample"></div>
         </div>
-        </body>
-        </html>
-        
+        <div class="skewing">
+            <h2> Skew</h2>
+            <div id="skewexample"></div>
+        </div>
+        <div class="rotating">
+            <h2> Rotate</h2>
+            <div id="rotatexample"></div>
+        </div>
+        <div class="translating">
+            <h2> Translate</h2>
+            <div id="translatexample"></div>
+        </div>
+        <div class="multiples">
+                <h2> Multiple Changes</h2>
+                <p>Rotate & Scale</p>
+                <div id="multiplexample"></div>
+            </div>
+            <div class="multiples2">
+                    <h2> Multiple Changes</h2>
+                    <p>Skew & Translate</p>
+                    <div id="multiples2example"></div>
+                </div>
+    </div>
+</body>
+
+</html>
