--- a/css3animations/css3animations.html
+++ b/css3animations/css3animations.html
@@ -26,7 +26,21 @@
             <div id="circle"></div>
             <p>Circle will stretch in and out 4 times on each page refresh</p>
         </div>
-
+        <div class="nudge">
+            <h2> Nudge </h2>
+            <div id="rectangle"></div>
+            <p>Rectangle will nudge back and forth 6 times on each page refresh</p>
+        </div>
+        <div class="skewx">
+            <h2> Skew X </h2>
+            <div id="square2"></div>
+            <p>Square will skew 8 times on on the X axis on each page refresh</p>
+        </div>
+        <div class="skewy">
+                <h2> Skew Y </h2>
+                <div id="square3"></div>
+                <p>Square will skew 10 times on the Y axis on each page refresh</p>
+            </div>
 
     </div>
 
