--- a/css3animations/css3animations.html
+++ b/css3animations/css3animations.html
@@ -37,10 +37,15 @@
             <p>Square will skew 8 times on on the X axis on each page refresh</p>
         </div>
         <div class="skewy">
-                <h2> Skew Y </h2>
-                <div id="square3"></div>
-                <p>Square will skew 10 times on the Y axis on each page refresh</p>
-            </div>
+            <h2> Skew Y </h2>
+            <div id="square3"></div>
+            <p>Square will skew 10 times on the Y axis on each page refresh</p>
+        </div>
+        <div class="rotate">
+            <h2> Rotate </h2>
+            <div id="rectangle2"></div>
+            <p>Rectange will rotate indefinitely</p>
+        </div>
 
     </div>
 
