--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                 <div class="topic13 topics">
                         <h3>13</h3>
                         <p>Triggering CSS Animations</p>
-                        <button><a href="#">Not Yet Page</a></button>
-                        <button><a href="#">Not Yet Code</a></button>
+                        <button><a href="https://ingebrigtsen-jessica.github.io/css3animations/css3animations.html">Example Page</a></button>
+                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/css3animations">Example Code</a></button>
                 </div>
         </div>
 </body>
