--- a/css3animations/css3animations.html
+++ b/css3animations/css3animations.html
@@ -46,6 +46,11 @@
             <div id="rectangle2"></div>
             <p>Rectange will rotate indefinitely</p>
         </div>
+        <div class="bounce">
+                <h2> Bounce </h2>
+                <div id="circle2"></div>
+                <p>Bouncing Circle</p>
+            </div>
 
     </div>
 
