--- a/css3animations/css3animations.html
+++ b/css3animations/css3animations.html
@@ -47,10 +47,15 @@
             <p>Rectange will rotate indefinitely</p>
         </div>
         <div class="bounce">
-                <h2> Bounce </h2>
-                <div id="circle2"></div>
-                <p>Bouncing Circle</p>
-            </div>
+            <h2> Bounce </h2>
+            <div id="circle2"></div>
+            <p>Indefinite Bouncing Circle</p>
+        </div>
+        <div class="move">
+            <h2> Move </h2>
+            <div id="circle3"></div>
+            <p>Bouncing & Moving Circle</p>
+        </div>
 
     </div>
 
