--- a/css3animations/css3animations.html
+++ b/css3animations/css3animations.html
@@ -56,6 +56,11 @@
             <div id="circle3"></div>
             <p>Bouncing & Moving Circle</p>
         </div>
+        <div class="flash">
+            <h2> Flash </h2>
+            <div id="text">Animations</div>
+            <p>Flashing Text</p>
+        </div>
 
     </div>
 
