--- a/css3animations/css3animations.html
+++ b/css3animations/css3animations.html
@@ -19,32 +19,32 @@
         <div class="colors">
             <h2> Pulse </h2>
             <div id="square"></div>
-            <p>Square will pulse with color change 2 times on each page refresh</p>
+            <p>Pulsing Square</p>
         </div>
         <div class="stretch">
             <h2> Stretch </h2>
             <div id="circle"></div>
-            <p>Circle will stretch in and out 4 times on each page refresh</p>
+            <p>Stretching Circle</p>
         </div>
         <div class="nudge">
             <h2> Nudge </h2>
             <div id="rectangle"></div>
-            <p>Rectangle will nudge back and forth 6 times on each page refresh</p>
+            <p>Nuding a Rectangle</p>
         </div>
         <div class="skewx">
             <h2> Skew X </h2>
             <div id="square2"></div>
-            <p>Square will skew 8 times on on the X axis on each page refresh</p>
+            <p>Skew square on the X axis</p>
         </div>
         <div class="skewy">
             <h2> Skew Y </h2>
             <div id="square3"></div>
-            <p>Square will skew 10 times on the Y axis on each page refresh</p>
+            <p>Skew square on the Y axis</p>
         </div>
         <div class="rotate">
             <h2> Rotate </h2>
             <div id="rectangle2"></div>
-            <p>Rectange will rotate indefinitely</p>
+            <p>Rotating Recntagle</p>
         </div>
         <div class="bounce">
             <h2> Bounce </h2>
