--- a/finalproject/finalproject.html
+++ b/finalproject/finalproject.html
@@ -13,6 +13,13 @@
 
 <body>
     <div class="container">
+        <div class="header">
+            <img id="nbalogo" src="images/nbalogo.png">
+            <h1>2017 - 2018 NBA Stats</h1>
+
         </div>
-        </body>
-        </html>
+    </div>
+    </div>
+</body>
+
+</html>
